<resources>
    <string name="app_name">트립 J</string>

    <string name="login_introduce">당신의 여행을 도와줄 MBTI J친구</string>

    <string name="user_nickname_title">여행 준비를하기 전에\n닉네임을 설정해주세요</string>
    <string name="user_nickname_subtitle">여행을 계획적으로 준비할 수 있게 도와줄게요</string>
    <string name="user_nickname_nickname_title">닉네임</string>
    <string name="user_nickname_nickname_content">랜덤닉네임</string>


    <string name="select_title">님!\n어디로 여행 갈 예정인가요?</string>
    <string name="select_sub_title">국가를 선택하시면 좋은 정보를 추천해줄게요!</string>

    <string name="select_continent_asia">아시아</string>
    <string name="select_continent_europe">유럽</string>
    <string name="select_continent_america">아메리카</string>

    <!-- asia -->
    <string name="select_country_japan">일본</string>
    <string name="select_country_chinese">중국</string>
    <string name="select_country_thailand">태국</string>
    <string name="select_country_hongkong">홍콩</string>

    <!-- europe -->
    <string name="select_country_england">영국</string>
    <string name="select_country_france">프랑스</string>
    <string name="select_country_italy">이탈리아</string>

    <!-- america -->
    <string name="select_country_usa">미국</string>
    <string name="select_country_canada">캐나다</string>
    <string name="select_country_argentina">아르헨티나</string>

    <string name="select_button_next">다음</string>


    <string name="user_input_title">님!\n여행을 준비중이신가요?</string>
    <string name="user_input_subtitle">여행을 계획적으로 준비할 수 있게 도와줄게요</string>

    <string name="user_input_travel_name">여행 이름</string>
    <string name="user_input_travel_name_hint">여행 이름을 작성해주세요.</string>
    <string name="user_input_travel_duration">여행 기간</string>
    <string name="user_input_travel_duration_hint">여행 일정을 선택해주세요.</string>
    <string name="user_input_travel_purpose">여행 목적</string>
    <string name="user_input_travel_purpose_hint">여행 목적을 선택해주세요.</string>

    <string name="user_input_button_select_all">선택 완료</string>

    <!-- calendar Fragment -->
    <string name="calendar_button">일정 적용하기</string>
    <string name="calendar_weekday_sunday">일</string>
    <string name="calendar_weekday_monday">월</string>
    <string name="calendar_weekday_tuesday">화</string>
    <string name="calendar_weekday_wednesday">수</string>
    <string name="calendar_weekday_thursday">목</string>
    <string name="calendar_weekday_friday">금</string>
    <string name="calendar_weekday_saturday">토</string>

    <!-- PurposeFragment -->
    <string name="purpose_title">여행 목적</string>
    <string name="purpose_user_input">직접 입력하기</string>
    <string name="purpose_rest_vacation">여유로운 휴식, 휴가</string>
    <string name="purpose_visit_place">관광지 명소 방문</string>
    <string name="purpose_business">사업, 업무 일정</string>
    <string name="purpose_study">학업, 유학</string>
    <string name="purpose_shopping">쇼핑</string>
    <string name="purpose_marrige">신혼 여행</string>

    <string-array name="purpose_array">
        <item>@string/purpose_rest_vacation</item>
        <item>@string/purpose_visit_place</item>
        <item>@string/purpose_business</item>
        <item>@string/purpose_study</item>
        <item>@string/purpose_shopping</item>
        <item>@string/purpose_marrige</item>
    </string-array>


    <!-- Home bottom navigation text -->
    <string name="home_bottom_my_trip">내 여행</string>
    <string name="home_bottom_community">커뮤니티</string>
    <string name="home_bottom_my_info">내 정보</string>



    <!-- Home Fragment Text -->
    <string name="home_fragment_previous_trip">지난 여행 기록</string>
    <string name="home_fragment_trip_info_title">여행 정보</string>
    <string name="home_fragment_check_list_title">체크리스트</string>
    <string name="home_fragment_exchange_title">환율</string>
    <string name="home_fragment_trip_tip_title">여행 꿀팁</string>
    <string name="home_fragment_trip_tip_content_talk">여행 가기 전\n기본 회화 배우기</string>
    <string name="home_fragment_trip_tip_content_cautious">여행 가기 전\n주의사항 알고가기</string>
    <string name="home_fragment_check_list_hint">가져갈 물품을 같이 확인해요</string>

    <!-- TalkTip -->
    <string-array name="conversation_tip_list">
        <item>기초</item>
        <item>공항</item>
        <item>호텔</item>
        <item>식당</item>
        <item>전철</item>
        <item>관광지</item>
    </string-array>


    <!-- Community Fragment Text-->
    <string name="community_fragment_home_title">커뮤니티</string>
    <string-array name="community_fragment_home_tab">
        <item>인기글</item>
        <item>최신글</item>
        <item>후기</item>
        <item>질문</item>
        <item>꿀팁</item>
    </string-array>

    <!-- Community Post Detail Fragment -->
    <string name="post_detail_fragment_title">게시글</string>
    <string name="post_detail_reply_delete">삭제하기</string>

    <!--Community Edit Post Fragment-->
    <string name="post_edit_fragment_title">게시글 작성</string>
    <string name="post_edit_fragment_enroll">등록</string>
    <string name="post_edit_fragment_subject">주제를 선택해주세요</string>
    <string name="post_edit_fragment_post_title">글 제목을 작성해주세요</string>
    <string name="post_edit_fragment_post_content">자유롭게 여행 글을 작성해주세요</string>
    <string name="post_edit_fragment_add_picture">사진 추가하기</string>

    <string name="post_edit_choose_subject">주제 선택하기</string>
    <string-array name="post_subject_list">
        <item>후기</item>
        <item>질문</item>
        <item>꿀팁</item>
    </string-array>
    <string name="post_edit_fragment_bottom_take_picture">사진 촬영하기</string>
    <string name="post_edit_fragment_bottom_get_album">앨범에서 선택하기</string>
    <string name="post_edit_fragment_bottom_cancel">취소</string>

    <!-- TalkTip Activity -->
    <string name="talk_tip_activity_title">기본 회화 배우기</string>

    <!-- CautionTip Activity -->
    <string name="caution_tip_activity_title">주의사항 알고가기</string>

    <!-- History -->
    <string name="history_list_fragment_title">지난 여행 기록</string>
    <string name="history_detail_fragment_travel_title">여행 정보</string>
    <string name="history_detail_fragment_check_list_title">체크리스트</string>


    <!-- My Info-->
    <string name="myInfo_fragment_last_history">지난 여행 기록</string>
    <string name="my_info_fragment_my_post">내 게시글</string>
    <string name="my_info_fragment_my_like">내 좋아요</string>
    <string name="my_info_fragment_setting_title">설정</string>
    <string name="my_info_fragment_login_setting">로그인 설정</string>

    <string name="my_info_fragment_customer_service">고객 센터</string>
    <string name="my_info_fragment_frequent_query">자주 묻는 사항</string>
    <string name="my_info_fragment_notification">공지 사항</string>
</resources>