<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:text="@string/user_nickname_title"
        android:fontFamily="@font/pretendard_bold"
        android:textSize="24sp"
        android:textColor="#171818"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:fontFamily="@font/pretendard_regular"
        android:textColor="#979797"
        android:textSize="16sp"
        android:text="@string/select_sub_title"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        android:layout_marginTop="4dp"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nicknameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        android:layout_marginTop="40dp"
        android:text="@string/user_nickname_nickname_title"
        android:textSize="18sp"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="#171818"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nicknameEditText"
        android:layout_width="@dimen/dp_0"
        android:layout_height="48dp"
        android:drawableStart="@drawable/travel_textinput_drawable_start"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/nicknameTitleTextView"
        android:layout_marginTop="@dimen/dp_12"
        android:drawablePadding="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_20"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        app:boxBackgroundMode="none"
        android:singleLine="true"
        android:ellipsize="end"
        android:imeOptions="actionDone"
        android:fontFamily="@font/pretendard_medium"
        android:textColorHint="@color/gray_scale_700"
        android:textColor="@color/gray_scale_700"
        android:textSize="@dimen/sp_16"
        android:hint="@string/user_nickname_nickname_content"
        android:background="@color/gray_scale_50"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="@dimen/dp_0"
        android:layout_height="56dp"
        android:background="@color/gray_scale_300"
        android:fontFamily="@font/pretendard_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:text="@string/select_button_next"
        android:textColor="@color/button_text_color_white"
        android:layout_marginBottom="@dimen/dp_8" />


</androidx.constraintlayout.widget.ConstraintLayout>
