<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="260dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="4dp"
            android:translationY="-1.88sp"
            android:gravity="top"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/user_input_title"
            android:textColor="#171818"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/dp_4"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="top"
            android:lineSpacingExtra="5sp"
            android:text="@string/user_input_subtitle"
            android:textColor="#979797"
            android:textSize="16sp"
            android:translationY="-2.45sp"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/travelNameTitleTextView"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/user_input_travel_name"
            style="@style/ContinentText"
            app:layout_constraintStart_toStartOf="@id/subTitleTextView"
            app:layout_constraintTop_toBottomOf="@id/subTitleTextView"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/travelNameTextInputLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/travelNameTitleTextView"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_20"
            app:boxBackgroundMode="none"
            android:background="@color/gray_scale_400"
            app:layout_constraintEnd_toEndOf="parent"
            android:clipToOutline="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/dp_12"
                android:drawablePadding="@dimen/dp_12"
                android:lineSpacingExtra="5sp"
                android:textSize="@dimen/sp_16"
                android:fontFamily="@font/pretendard_medium"
                android:drawableStart="@drawable/travel_textinput_drawable_start"
                android:hint="@string/user_input_travel_name_hint"
                android:textColorHint="@color/gray_scale_400"/>


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/travelDurationTitleTextView"
            style="@style/ContinentText"
            android:layout_marginTop="36dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/user_input_travel_duration"
            android:translationY="-1.41sp"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/travelNameTextInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/travelDurationLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/travelDurationTitleTextView"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/gray_scale_400">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/travelDurationTextView"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:drawableStart="@drawable/travel_duration_image"
                android:drawablePadding="@dimen/dp_12"
                android:fontFamily="@font/pretendard_medium"
                android:layout_marginTop="@dimen/dp_12"
                android:textSize="@dimen/sp_16"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/user_input_travel_duration_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/travelPurposeTitleTextView"
            style="@style/ContinentText"
            android:layout_marginTop="36dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/user_input_travel_purpose"
            android:translationY="-1.41sp"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/travelDurationLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/travelPurposeLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/travelPurposeTitleTextView"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@color/gray_scale_400">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/travelPurposeTextView"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:drawableStart="@drawable/travel_purpose_image"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:textSize="@dimen/sp_16"
                android:drawablePadding="@dimen/dp_12"
                android:text="@string/user_input_travel_purpose_hint"
                android:fontFamily="@font/pretendard_medium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="@dimen/dp_0"
            android:layout_height="56dp"
            android:clipToOutline="true"
            android:background="@color/gray_scale_300"
            android:fontFamily="@font/pretendard_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_12"
            android:paddingTop="@dimen/dp_12"
            android:text="@string/user_input_button_select_all"
            android:textColor="@color/button_text_color_white"
            android:layout_marginBottom="@dimen/dp_8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>