<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="40dp"
    android:background="#646464">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:background="@drawable/background_bottom_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/takePictureButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/post_edit_fragment_bottom_take_picture"
            android:textColor="@color/gray_scale_500"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/background_divide_line" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getAlbumButton"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="56dp"
            android:background="@color/white"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/post_edit_fragment_bottom_get_album"
            android:textColor="@color/gray_scale_500"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/background_bottom_dialog"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/post_edit_fragment_bottom_cancel"
        android:textColor="@color/gray_scale_500"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>