<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/includedToolBar"
        layout="@layout/layout_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subjectTextView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:background="@color/gray_scale_50"
        android:drawableEnd="@drawable/hamburger"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/post_edit_fragment_subject"
        android:textColor="@color/gray_scale_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includedToolBar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/postTitleEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_scale_50"
        android:drawablePadding="@dimen/dp_12"
        android:ellipsize="end"
        android:fontFamily="@font/pretendard_medium"
        android:hint="@string/post_edit_fragment_post_title"
        android:imeOptions="actionDone"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_12"
        android:singleLine="true"
        android:textColor="@color/gray_scale_700"
        android:textColorHint="@color/gray_scale_400"
        android:textSize="@dimen/sp_16"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="@id/subjectTextView"
        app:layout_constraintStart_toStartOf="@id/subjectTextView"
        app:layout_constraintTop_toBottomOf="@id/subjectTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/postContentEditText"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_scale_50"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="top"
        android:hint="@string/post_edit_fragment_post_content"
        android:imeOptions="actionDone"
        android:padding="@dimen/dp_16"
        android:textColor="@color/gray_scale_700"
        android:textColorHint="@color/gray_scale_400"
        android:textSize="@dimen/sp_16"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="@id/subjectTextView"
        app:layout_constraintStart_toStartOf="@id/subjectTextView"
        app:layout_constraintTop_toBottomOf="@id/postTitleEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pictureRecyclerView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/postContentEditText"
        app:layout_constraintStart_toStartOf="@id/subjectTextView"
        app:layout_constraintEnd_toEndOf="@id/subjectTextView"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/tempLinearLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/gray_scale_50"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/subjectTextView"
        app:layout_constraintStart_toStartOf="@id/subjectTextView"
        app:layout_constraintTop_toBottomOf="@id/pictureRecyclerView">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addPictureTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawableStart="@drawable/plus"
            android:drawablePadding="8dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/post_edit_fragment_add_picture"
            android:textColor="@color/gray_scale_400"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>